# wallpicker

./: .gitignore  CLAUDE.md  Cargo.toml  bundle-macos.sh
src/: main.rs
src/cache/: mod.rs
src/commands/: dedupe.rs  mod.rs  preview.rs  wallpaper.rs
src/config/: mod.rs
src/image/: mod.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/scanner/: mod.rs
src/tray/: mod.rs
src/ui/: app.rs  icons.rs  mod.rs  preview.rs
src/wallhaven/: mod.rs
src/wallpaper/: mod.rs
