[package]
name = "wallpicker"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["image", "tokio", "advanced", "svg"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
walkdir = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
urlencoding = "2.1"
single-instance = "0.3"
rand = "0.8.5"

[[bin]]
name = "wallpicker"
path = "src/main.rs"